--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: #DAF7A6;
+background-color: gray;
 
 }
 
@@ -9,7 +9,9 @@ form {
     
 
 }
- 
+ label {
+    color: white;
+ }
 .desenho {
 width: 100;
 height: 100px;
@@ -18,7 +20,7 @@ margin-bottom: 75%;
 .btn {
     color: aliceblue;
     width: 40%;
-    font-size: 18px;
+    font-size: 20px;
 }
 .botao{
     margin-top: 30px;
