--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: gray;
+background-color: rgb(121, 29, 121)
 
 }
 
@@ -13,16 +13,20 @@ form {
     color: white;
  }
 .desenho {
-width: 100;
-height: 100px;
-margin-bottom: 75%;
+width: 20px;
+height: 20px;
+margin-bottom: 93%;
+position: relative;
 }
 .btn {
     color: aliceblue;
     width: 40%;
     font-size: 20px;
+    position: relative;
+    text-align: center;
 }
 .botao{
+    
     margin-top: 30px;
 
 }
